# WasmEdge-tensorflow

./: .CurrentChangelog.md  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE.spdx  README.md
.github/scripts/: clang-format.sh
.github/workflows/: build.yml  linter.yml  release.yml
cmake/: FindTensorflow.cmake
include/: CMakeLists.txt  image_base.h  image_env.h  image_func.h  image_module.h  ssvm-tensorflow.h  ssvm-tensorflowlite.h  tensorflow_base.h  tensorflow_env.h  tensorflow_func.h  tensorflow_module.h  tensorflowfake_func.h  tensorflowfake_module.h  tensorflowlite_base.h  tensorflowlite_func.h  tensorflowlite_module.h  wasmedge-tensorflow.h  wasmedge-tensorflowlite.h
include/wasmedge/: wasmedge-tensorflow.h  wasmedge-tensorflowlite.h
lib/: CMakeLists.txt  image_func.cpp  image_module.cpp  ssvm-tensorflow.cpp  ssvm-tensorflowlite.cpp  tensorflow_func.cpp  tensorflow_module.cpp  tensorflowlite_func.cpp  tensorflowlite_module.cpp  wasmedge-tensorflow.cpp  wasmedge-tensorflowlite.cpp
tools/: CMakeLists.txt  download_dependencies_all.sh  download_dependencies_lite.sh  download_dependencies_tf.sh  download_dependencies_tflite.sh  show-tflite-tensor.cpp  ssvmr-lite.cpp  ssvmr.cpp
